--- a/serverless.yml
+++ b/serverless.yml
@@ -19,9 +19,11 @@ service: updatecheckerlambdas
 # You can pin your service to only deploy with a specific Serverless version
 # Check out our docs for more details
 frameworkVersion: '2'
+variablesResolutionMode: 20210326
 
 provider:
   name: aws
+  region: eu-central-1
   runtime: python3.8
   lambdaHashingVersion: 20201221
   iam:
@@ -39,11 +41,11 @@ provider:
             - Fn::GetAtt: [ ProductsTable, Arn ]
   environment:
     PRODUCTS_TABLE: ${self:custom.tableName}
+    MAIL_PASSWORD: ${ssm:/mail-password}
 
 
 # you can overwrite defaults here
 #  stage: dev
-#  region: us-east-1
 
 # you can add statements to the Lambda function's IAM Role here
 #  iamRoleStatements:
@@ -77,7 +79,7 @@ functions:
   ikea:
     handler: src/functions/ikea/handler.go
     events:
-    - schedule: rate(1 minute)
+    - schedule: rate(1 day)
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
